Fix - fixed resize bug

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -104,6 +104,16 @@
 /* Dashboard
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+.backgroupd {
+  width: 95%;
+  display: inline-block;
+  padding-left: 2%;
+  padding-right: 10%;
+  /*border-left-style: solid;
+  border-left-color: #4A8F97;
+  border-left-width: 1pt; */
+}
+
 .dashboard {
   /*width: 100%;*/
   display: inline-block;
