--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -105,7 +105,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .backgroupd {
-  width: 95%;
+  /*width: 800pt;*/
   display: inline-block;
   padding-left: 2%;
   padding-right: 10%;
