--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -27,7 +27,6 @@
 
 /* This was actually not quite right -
    dropdowns were overlapping each other (edited October 26)
-
 .Select {
     z-index: 1002;
 }*/
@@ -105,7 +104,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .backgroupd {
-  /*width: 800pt;*/
+  width: 90%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 10%;
