--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -129,6 +129,12 @@
   padding-top: 1%;
 }
 
+.tables {
+  padding-bottom: 1%;
+  padding-top: 1%;
+}
+
+
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
