--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -111,6 +111,7 @@
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
+  /* background-color: #F3F4F5; */
 }
 
 .dashboard {
@@ -121,6 +122,7 @@
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
+  /* background-color: #F3F4F5; */
 }
 
 .region_button {
@@ -209,6 +211,8 @@
 /* Fonts
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+@import url('https://fonts.cdnfonts.com/css/bahnschrift');
+
 @font-face {
 	font-family: 'proxima_nova_rgregular';
 	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
@@ -274,8 +278,8 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: 'proxima_nova_rgregular', Arial;/* "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-  color: #4D4E6A; 
+  font-family: 'Bahnschrift';/* "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  color: #002145; 
   /*background-color: #fffced;*/
 }
 
@@ -286,12 +290,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 300; }
-h1 { font-family: 'Montserrat'; font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; }
-h2 { font-family: 'Montserrat'; font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
-h3 { font-family: 'Montserrat'; color: #4A8F97; font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
-h4 { font-family: 'Montserrat'; color: #4A8F97; font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
-h5 { font-family: 'Montserrat'; color: #4A8F97; font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
-h6 { font-family: 'Montserrat'; color: #4A8F97; font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
+h1 { font-family: 'Bahnschrift'; font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; }
+h2 { font-family: 'Bahnschrift'; color: #39C0F7; font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
+h3 { font-family: 'Bahnschrift'; color: #002145; font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
+h4 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
+h5 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
+h6 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
 
 p {
   margin-top: 0; }
