Fix - page 2 update error

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -169,6 +169,12 @@
 } */
 
 
+.pg2-plot-lgeo {
+  /* width: 90%;
+  display: inline-block; */
+  padding-top: 1%;
+}
+
 .pg3-plot-lgeo {
   /* width: 90%;
   display: inline-block; */
