--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -104,7 +104,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .background-lgeo {
-  /* width: 90%; */
+  width: 90%;
   display: inline-block;
   padding-left: 2%;
   /* padding-right: 10%; */
