--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -107,7 +107,7 @@
   width: 90%;
   display: inline-block;
   padding-left: 2%;
-  /* padding-right: 10%; */
+  padding-right: 2%;
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -118,7 +118,7 @@
   width: 100%;
   display: inline-block;
   padding-left: 2%;
-  /* padding-right: 10%; */
+  padding-right: 2%;
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -199,6 +199,9 @@
   padding-bottom: 1%;
 } */
 
+.muni-reg-text-lgeo{
+  width: 90%;
+}
 
 .export{
   margin-bottom: 5%;
