--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -114,6 +114,17 @@
   /* background-color: #F3F4F5; */
 }
 
+.dashboard-pg1-lgeo {
+  width: 100%;
+  display: inline-block;
+  padding-left: 2%;
+  padding-right: 2%;
+  /*border-left-style: solid;
+  border-left-color: #4A8F97;
+  border-left-width: 1pt; */
+  /* background-color: #F3F4F5; */
+}
+
 .dashboard-lgeo {
   width: 100%;
   display: inline-block;
@@ -124,6 +135,27 @@
   border-left-width: 1pt; */
   /* background-color: #F3F4F5; */
 }
+
+/* 
+@media (max-width: 1000px) {
+  .dashboard-lgeo  {
+    width: 1000px;
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+
+@media (min-width: 1000px) {
+  .dashboard-lgeo  {
+    width: 100%;
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+} */
+
 
 .dropdown-box-lgeo {
   /* width: 70%; */
