--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -103,11 +103,17 @@
 /* Dashboard
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+/* <div class="dashboardWrapper" style="position: relative;">
+<embed style="border: none;" src="https://hartdashboard-kook-lgeo.koyeb.app/page2" dpi="300" width="100%" height="3200vh">
+</div> */
+
+
 .background-lgeo {
   width: 90%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
+  /* transform:scale(0.5); */
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -123,6 +129,7 @@
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
   /* background-color: #F3F4F5; */
+
 }
 
 .dashboard-lgeo {
