--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -113,7 +113,9 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
-  /* transform:scale(0.5); */
+  /* transform: translate(0%, -24%); */
+
+
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -137,6 +139,7 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
+  /* transform:scale(0.5); */
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
