--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -110,12 +110,12 @@
 
 .background-lgeo {
   width: 90%;
+  /* height: 100vh; */
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
-  /* transform: translate(0%, -24%); */
-
-
+  /* transform: translate(-24%, -24%); */
+  overflow: hidden;
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -127,6 +127,7 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
+
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -139,7 +140,10 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
-  /* transform:scale(0.5); */
+  transform:scale(0.33);
+  transform-origin: left top;
+  margin-bottom:-2000px;
+  margin-right:-100px;
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -147,7 +151,7 @@
 }
 
 
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
   .dashboard-lgeo  {
     width: 1000px;
     display: inline-block;
@@ -164,7 +168,7 @@
     padding-left: 2%;
     padding-right: 2%;
   }
-}
+} */
 
 
 .dropdown-box-lgeo {
