--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -140,10 +140,7 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
-  transform:scale(0.33);
-  transform-origin: left top;
-  margin-bottom:-2000px;
-  margin-right:-100px;
+
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -151,12 +148,16 @@
 }
 
 
-/* @media (max-width: 1000px) {
+@media (max-width: 1000px) {
   .dashboard-lgeo  {
-    width: 1000px;
+    width: 100%;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
+    transform:scale(0.33);
+    transform-origin: left top;
+    margin-bottom:-2000px;
+    margin-right:-100px;
   }
 }
 
@@ -168,7 +169,7 @@
     padding-left: 2%;
     padding-right: 2%;
   }
-} */
+}
 
 
 .dropdown-box-lgeo {
