--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -150,7 +150,7 @@
 
 @media (max-width: 1000px) {
   .dashboard-lgeo  {
-    width: 100%;
+    width: 1000px;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
