--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -184,7 +184,8 @@
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
-
+  padding-bottom: 2%;
+  
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
