--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -185,7 +185,7 @@
   padding-left: 2%;
   padding-right: 2%;
   padding-bottom: 2%;
-  
+
   /*border-left-style: solid;
   border-left-color: #4A8F97;
   border-left-width: 1pt; */
@@ -365,6 +365,11 @@
   padding-top: 1%;
 }
 
+.pg3-table-lgeo {
+  /* width: 90%; */
+  padding-bottom: 1.5%;
+}
+
 .pg3-table-plot-box-lgeo {
   /* width: 90%; */
   display: block;
@@ -379,6 +384,7 @@
 
 .muni-reg-text-lgeo{
   width: 90%;
+  padding-bottom: 1%;
 }
 
 .export{
@@ -620,7 +626,7 @@ h2 { font-family: 'Bahnschrift'; color: #39C0F7; font-size: 3.6rem; line-height:
 h3 { font-family: 'Bahnschrift'; color: #002145; font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
 h5 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
-h6 { font-family: 'Bahnschrift'; color: #002145; font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
+h6 { font-family: 'Bahnschrift'; color: #002145; font-size: 1.8rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
 
 p {
   margin-top: 0; }
