--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -180,7 +180,7 @@
 
 
 .dashboard-pg1-lgeo {
-  width: 100%;
+  width: 90%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
@@ -194,7 +194,7 @@
 }
 
 .dashboard-lgeo {
-  width: 100%;
+  width: 90%;
   display: inline-block;
   padding-left: 2%;
   padding-right: 2%;
@@ -223,7 +223,7 @@
 
 @media (min-width: 1000px) {
   .dashboard-lgeo  {
-    width: 100%;
+    width: 90%;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
@@ -687,7 +687,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: rgb(52, 88, 245);
+  color: #3EB549;
   border-color: #888;
   /* background-color: #b6ebfc; */
   outline: 0; }
