Fix - page 2 fixed2

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -348,7 +348,7 @@
 
 
 .pg2-plot-lgeo {
-  width: 90%;
+  /* width: 90%; */
   display: block;
   padding-top: 1%;
 }
@@ -360,7 +360,7 @@
 }
 
 .pg3-plot-lgeo {
-  width: 90%;
+  /* width: 90%; */
   display: block;
   padding-top: 1%;
 }
